[gd_scene load_steps=25 format=3 uid="uid://oijfxguj404r"]

[ext_resource type="Script" path="res://scenes/grass_scene.gd" id="1_qpev1"]
[ext_resource type="Shader" path="res://shaders/device_screen.gdshader" id="3_jvxd3"]
[ext_resource type="PackedScene" uid="uid://budu6000msy4d" path="res://device_model.tscn" id="4_gt2wp"]
[ext_resource type="Texture2D" uid="uid://bcsoiuuis4yx2" path="res://assets/m8_screen_placeholder.png" id="4_qxguy"]
[ext_resource type="PackedScene" uid="uid://bckroenwlecqv" path="res://humanized_camera_3d.tscn" id="6_08s3p"]
[ext_resource type="Texture2D" uid="uid://bbeh1e40ob3nd" path="res://assets/texture_06.png" id="7_2kg18"]
[ext_resource type="PackedScene" uid="uid://ceqlf8kgdxjeb" path="res://grass_area.tscn" id="7_83g7i"]
[ext_resource type="Shader" path="res://grass_area.gdshader" id="8_lfm6x"]

[sub_resource type="Environment" id="Environment_jpj6b"]
background_mode = 2
tonemap_mode = 3
ssr_fade_in = 0.321532
ssao_enabled = true
ssao_intensity = 16.0
sdfgi_enabled = true
fog_light_color = Color(0, 0, 0, 1)
fog_density = 0.001
volumetric_fog_enabled = true
volumetric_fog_density = 0.02
volumetric_fog_albedo = Color(1, 0.28, 0.928, 1)
volumetric_fog_detail_spread = 0.5
adjustment_enabled = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8tk3a"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("3_jvxd3")
shader_parameter/emission_amount = 0.7
shader_parameter/edge_darken = -0.3
shader_parameter/edge_burn = 0.0
shader_parameter/edge_burn_ramp = 10.0
shader_parameter/brightness = 0.0
shader_parameter/backlight = false
shader_parameter/use_linear_filter = true
shader_parameter/texture_linear = ExtResource("4_qxguy")
shader_parameter/texture_nearest = ExtResource("4_qxguy")

[sub_resource type="CameraAttributesPractical" id="CameraAttributesPractical_lyp6v"]
dof_blur_far_enabled = true
dof_blur_far_distance = 13.9
dof_blur_far_transition = 2.0
dof_blur_near_enabled = true
dof_blur_near_distance = 10.9
dof_blur_near_transition = 0.6
dof_blur_amount = 0.25

[sub_resource type="Gradient" id="Gradient_1h2sb"]
interpolation_mode = 2
offsets = PackedFloat32Array(0, 0.401914, 1)
colors = PackedColorArray(0, 0.66, 0.363, 1, 0.0028, 0.0896934, 0.14, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_o6olw"]
resource_local_to_scene = true
gradient = SubResource("Gradient_1h2sb")

[sub_resource type="Gradient" id="Gradient_pysiu"]
offsets = PackedFloat32Array(0.205742, 0.311005, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.960894, 0.960894, 0.960894, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1ikkl"]
gradient = SubResource("Gradient_pysiu")
fill = 1
fill_from = Vector2(0.1, 0.1)
fill_to = Vector2(0.320513, 0.141026)

[sub_resource type="Gradient" id="Gradient_t1fi8"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_6a26p"]
noise_type = 3
frequency = 0.004

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_otixg"]
resource_local_to_scene = true
seamless = true
color_ramp = SubResource("Gradient_t1fi8")
noise = SubResource("FastNoiseLite_6a26p")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nkofa"]
resource_local_to_scene = true
render_priority = 0
shader = ExtResource("8_lfm6x")
shader_parameter/uv_offset = 0.365
shader_parameter/heightmap_offset = Vector2(10.445, 8.52)
shader_parameter/heightmap_strength = 0.3
shader_parameter/wind_dir = Vector2(1, 1)
shader_parameter/wind_strength = 0.5
shader_parameter/wind_speed = 10.0
shader_parameter/proximity_fade_distance = 0.0
shader_parameter/distance_fade_min = 0.0
shader_parameter/distance_fade_max = 0.0
shader_parameter/color_ramp = SubResource("GradientTexture1D_o6olw")
shader_parameter/wind_noise = SubResource("NoiseTexture2D_otixg")
shader_parameter/heightmap = SubResource("GradientTexture2D_1ikkl")

[sub_resource type="Curve" id="Curve_y7obg"]
_data = [Vector2(0, 0), 0.0, 5.75705, 0, 0, Vector2(0.485294, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), -0.0962715, 0.0, 0, 0]
point_count = 3

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e6yxm"]
billboard_mode = 2
grow_amount = -3.725

[sub_resource type="RibbonTrailMesh" id="RibbonTrailMesh_541ca"]
material = SubResource("StandardMaterial3D_e6yxm")
shape = 0
size = 0.2
sections = 3
section_length = 0.5
section_segments = 1
curve = SubResource("Curve_y7obg")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_erev3"]
albedo_color = Color(0.184942, 0.284613, 0.282181, 1)
albedo_texture = ExtResource("7_2kg18")

[sub_resource type="PlaneMesh" id="PlaneMesh_qjwyl"]
size = Vector2(20, 20)

[node name="M8Scene" type="Node3D"]
script = ExtResource("1_qpev1")
m8_scene_name = "Grass"
metadata/_edit_vertical_guides_ = [640.0]
metadata/_edit_horizontal_guides_ = [480.0]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
unique_name_in_owner = true
environment = SubResource("Environment_jpj6b")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(-0.0424605, -0.815496, 0.577203, 0.520341, 0.475136, 0.709571, -0.852902, 0.330471, 0.404162, 0.087698, 1.97022, -16.5359)
visible = false
light_color = Color(0.862333, 0.86, 1, 1)
shadow_enabled = true
shadow_bias = 0.01
shadow_opacity = 0.83
shadow_blur = 3.0

[node name="LightLamp" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.266284, 0.95967, -0.0901449, -0.46377, 0.209544, 0.860819, 0.844991, -0.187416, 0.500865, -3.784, 18.533, 10.369)
light_color = Color(1, 0.922, 0.64, 1)
light_size = 3.0
shadow_enabled = true
shadow_bias = 0.1
shadow_normal_bias = 1.58
shadow_blur = 2.357
spot_range = 25.714
spot_attenuation = 0.0236832
spot_angle = 14.15
spot_angle_attenuation = 0.183011

[node name="LightLeft" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.231346, 0.952383, -0.198611, -0.918842, 0.280983, 0.27709, 0.319702, 0.118389, 0.940093, -4.77328, 8.68898, 10.2875)
light_color = Color(1, 0.11, 0.11, 1)
light_energy = 16.0
light_size = 3.0
shadow_enabled = true
shadow_blur = 0.5
spot_range = 43.892
spot_angle = 36.8368

[node name="LightRight" type="SpotLight3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.356473, 0.892189, 0.277356, -0.864151, 0.201984, 0.460919, 0.355205, -0.403983, 0.842987, 3.05577, 11.1611, 10.2875)
light_color = Color(0.614333, 0.11, 1, 1)
light_energy = 6.243
light_size = 3.0
shadow_enabled = true
shadow_blur = 0.5
spot_range = 43.892
spot_angle = 36.8368

[node name="DeviceModel" parent="." instance=ExtResource("4_gt2wp")]
unique_name_in_owner = true
transform = Transform3D(35.8742, 0, 14.8596, 0, 38.83, 0, -14.8596, 0, 35.8742, -2.25, 2.51882, 0.15)
screen_material = SubResource("ShaderMaterial_8tk3a")

[node name="Camera3D" parent="." instance=ExtResource("6_08s3p")]
unique_name_in_owner = true
transform = Transform3D(0.994522, 0.0856243, -0.0599548, 0, 0.573576, 0.819152, 0.104528, -0.814665, 0.570434, -2.67, 12.5984, 7.73)
attributes = SubResource("CameraAttributesPractical_lyp6v")
dof_focus_distance = 12.4

[node name="GrassArea" parent="." instance=ExtResource("7_83g7i")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.311, 1.3, 2)
material_override = SubResource("ShaderMaterial_nkofa")
grass_mesh = SubResource("RibbonTrailMesh_541ca")
num_meshes = 16000

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.312, 1.397, 1.488)
material_override = SubResource("StandardMaterial3D_erev3")
mesh = SubResource("PlaneMesh_qjwyl")
